--- a/RESTful-SOAP-Webservice/pom.xml
+++ b/RESTful-SOAP-Webservice/pom.xml
@@ -66,7 +66,7 @@
 			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.5.8</version>
@@ -80,7 +80,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.8</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -201,12 +201,19 @@
 			<version>3.2.0.Beta1</version>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aop</artifactId>
-			<version>4.0.2.RELEASE</version>
+		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-aop</artifactId> 
+			<version>4.0.2.RELEASE</version> <scope>compile</scope> </dependency> -->
+
+		<!-- <dependency> <groupId>org.springframework.ws</groupId> <artifactId>spring-ws-core</artifactId> 
+			<version>2.1.4.RELEASE</version> <scope>compile</scope> <exclusions> <exclusion> 
+			<groupId>javax.xml.stream</groupId> <artifactId>stax-api</artifactId> </exclusion> 
+			</exclusions> </dependency> -->
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>3.2.3</version>
 			<scope>compile</scope>
-		</dependency> -->
+		</dependency>
 	</dependencies>
 	<!-- END DEPENDENCIES -->
 </project>
